# errlens

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.md  launch.md
errlens/: __init__.py  __main__.py  cli.py  config.py  doctor.py  hooks.py  ollama_client.py  prompt.py  ui.py
tests/: test_cli.py  test_ollama_client.py  test_prompt.py  test_ui.py
