[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "errlens"
version = "0.1.0"
description = "A local-first terminal error explainer powered by Ollama."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "errlens contributors" }]
keywords = ["cli", "terminal", "errors", "ollama", "local-first", "privacy"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/errlens"
Issues = "https://github.com/yourname/errlens/issues"

[project.scripts]
errlens = "errlens.cli:main"

[tool.setuptools.packages.find]
include = ["errlens*"]
